# OrderBook

./: LICENSE.txt  README.md
OrderBook/: CMakeLists.txt  README.md  agentmanager.h  agents.h  charts.h  enums.h  exchange.h  gateway.h  gui.h  hft.h  includes.h  main.cpp  matchingengine.h  order.h  orderbook.h  ordermanager.h  pricelevels.h  snapshot.h  testdummyorders.h  trades.h  windows.h
OrderBook.xcodeproj/: project.pbxproj
OrderBook.xcodeproj/xcshareddata/xcschemes/: OrderBook.xcscheme
OrderBook.xcodeproj/xcuserdata/acool.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
OrderBook.xcodeproj/xcuserdata/acool.xcuserdatad/xcschemes/: xcschememanagement.plist
OrderBook/lib/glad/include/glad/: glad.h
OrderBook/lib/glad/src/: glad.c
